fix quotation on index.html as well as text align on the anchor tag.

--- a/style/index.css
+++ b/style/index.css
@@ -144,6 +144,13 @@ main .container-profile img:hover {
     bottom: 10px;
 }
 
+main .container-profile .my-quote .quotation-credit {
+    display: block;
+    text-align: end;
+    margin-right: 10px;
+    margin-top: 5px;
+}
+
 main .container-introduction {
     display: flex;
     width: 80%;
@@ -163,10 +170,12 @@ main .container-introduction .container-paragraph .paragraph.main {
 
 main .container-introduction .container-paragraph .paragraph.anchor {
     margin-top: 9px;
-    text-align: justify;
+    text-align: start;
+
 }
 
 main .container-introduction .container-paragraph a {
+    display: inline;
     font-weight: 900;
     font-size: var(--anchor-font-size-link);
 }
